main.css
body {
    max-width: 50rem;
    margin: 0 auto;
    font-family: Helvetica, sans-serif;
    font-size: 1em;
    background: rgba(190, 184, 198, 0.17);
    color: #393939;

}

h2, h3 {
    margin-left: 10px;
}

p {
    line-height: 1.5;
}

footer {
    text-align: center;
    padding: 30px;
}

header {
    margin-bottom: 30px;
}

main {
    background: #eeeeee;
    padding: 10px 30px 30px 30px;
}

img {
    max-width: 100%;
    box-shadow: 0 0 5px rgba(51, 51, 51, 0.66);
}

figcaption {
    text-align: center;
    font-style: italic;
}


th{
    text-align: left;
    padding: 5px 5px;
    font-size: 1.1em;
}

tr:nth-child(even) {background-color: white}
tr:nth-child(odd) {background-color: rgba(141, 60, 88, 0.26)
}

td {
    padding: 5px 10px;
    line-height: 1.3;
}

table caption {
    margin: 10px 0;
    font-weight: bold;
}

